[package]
authors = ["Vincent Esche <regexident@gmail.com>"]
categories = ["development-tools"]
description = "A lint for watching over your project's MPL-2.0 licensed source files."
documentation = "https://regexident.github.io/missing_mpl"
homepage = "https://github.com/regexident/missing_mpl"
keywords = [
    "lint",
    "mpl",
    "license",
]
license = "MPL-2.0"
name = "missing_mpl"
readme = "README.md"
repository = "https://github.com/regexident/missing_mpl"
version = "0.1.1"

[dependencies]
strsim = "~0.8"

[lib]
crate-type = ["dylib"]
name = "missing_mpl"
