[package]
authors = ["Vincent Esche <regexident@gmail.com>"]
categories = ["development-tools"]
description = "A lint for watching over your project's MPL-2.0 licensed source files."
documentation = "https://regexident.github.io/missing_mpl"
homepage = "https://github.com/regexident/missing_mpl"
keywords = [
    "lint",
    "mpl",
    "license",
]
license = "MPL-2.0"
name = "missing_mpl"
readme = "README.md"
repository = "https://github.com/regexident/missing_mpl"
version = "0.2.0"
edition = "2018"

[dependencies]
strsim = "~0.10"

[lib]
crate-type = ["dylib"]
name = "missing_mpl"
